feat(engine): implement bonus group by aggregation with row counting